--- a/src/main/resources/templates/TinyurlForm.html
+++ b/src/main/resources/templates/TinyurlForm.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Create Short URL</title>
-  <link rel="stylesheet" th:href="@{/css/style.css}" href="/css/style.css">
+  <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
   <h1>Create Short URL</h1>
